Fix post placeholder padding on tablet views

--- a/client/components/post-placeholder/styles.scss
+++ b/client/components/post-placeholder/styles.scss
@@ -6,7 +6,7 @@
   padding: 0 25px;
   width: 100%;
 
-  @media #{$desktop} {
+  @media #{$tablet-wide} {
     padding: 0;
   }
 }
